mudança no nome do index

--- a/departamentos.html
+++ b/departamentos.html
@@ -14,7 +14,7 @@
       <span class="titulo-texto">Instituto de Ciências Exatas | UFRRJ</span>
     </div>
     <ul class="navegacao">
-      <li><a href="./ice.html" class="link-navbar">Sobre Nós</a></li>
+      <li><a href="./index.html" class="link-navbar">Sobre Nós</a></li>
       <li><a href="./noticiasice.html" class="link-navbar">Notícias</a></li>
       <li><a href="./departamentos.html" class="link-navbar">Departamentos</a></li>
     </ul>
@@ -25,22 +25,35 @@
     <div class="dept-cards">
       <div class="card">
         <span class="titulo-card">Matemática</span>
-        <p>O Departamento de Matemática (DEMAT) da UFRRJ, fundado em 1975, oferece formação sólida em Matemática nas modalidades Licenciatura, Bacharelado e Bacharelado em Matemática Aplicada Computacional. Integra história, ensino e pesquisa, preparando profissionais capacitados e conscientes de sua responsabilidade na educação e aplicação da matemática em diversas áreas do conhecimento e tecnologia.
+        <p>O Departamento de Matemática (DEMAT) da UFRRJ, fundado em 1975, oferece formação sólida em Matemática nas
+          modalidades Licenciatura, Bacharelado e Bacharelado em Matemática Aplicada Computacional. Integra história,
+          ensino e pesquisa, preparando profissionais capacitados e conscientes de sua responsabilidade na educação e
+          aplicação da matemática em diversas áreas do conhecimento e tecnologia.
         </p>
       </div>
       <div class="card">
         <span class="titulo-card">Física</span>
-        <p>O curso de Licenciatura em Física da UFRRJ, oferecido pelo Departamento de Física (DEFIS), forma profissionais com sólidos conhecimentos em Física e sua didática, capacitados em didática para o ensino médio e conscientes do processo científico. Com corpo docente qualificado, investe em estratégias inovadoras para formar jovens cidadãos e futuros pesquisadores, conscientes de seu papel como integrantes de um gigantesco mecanismo chamado universo.
+        <p>O curso de Licenciatura em Física da UFRRJ, oferecido pelo Departamento de Física (DEFIS), forma
+          profissionais com sólidos conhecimentos em Física e sua didática, capacitados em didática para o ensino médio
+          e conscientes do processo científico. Com corpo docente qualificado, investe em estratégias inovadoras para
+          formar jovens cidadãos e futuros pesquisadores, conscientes de seu papel como integrantes de um gigantesco
+          mecanismo chamado universo.
         </p>
       </div>
       <div class="card">
         <span class="titulo-card">Computação</span>
-        <p>A computação impulsiona a inovação e a transformação digital, com impactos em diversas áreas tecnológicas e sociais. O Departamento de Computação (DCOMP), desde sua criação, forma profissionais capacitados em Sistemas de Informação, destacando-se no mercado e na academia. Com foco em um ensino atualizado, promove atividades de pesquisa e inovação, integrando alunos em projetos de desenvolvimento científico e tecnológico.
+        <p>A computação impulsiona a inovação e a transformação digital, com impactos em diversas áreas tecnológicas e
+          sociais. O Departamento de Computação (DCOMP), desde sua criação, forma profissionais capacitados em Sistemas
+          de Informação, destacando-se no mercado e na academia. Com foco em um ensino atualizado, promove atividades de
+          pesquisa e inovação, integrando alunos em projetos de desenvolvimento científico e tecnológico.
         </p>
       </div>
       <div class="card">
         <span class="titulo-card">Química</span>
-        <p>A química desempenha um papel vital no estudo e preservação do mundo natural, com avanços refletidos em diversas áreas tecnológicas e industriais. Desde 1968, o Departamento de Química (DEQUIM) forma profissionais qualificados, destacando-se na ciência e indústria. Com foco no dinamismo do mercado, promove um curso atualizado e incentiva a participação em programas de Iniciação Científica.
+        <p>A química desempenha um papel vital no estudo e preservação do mundo natural, com avanços refletidos em
+          diversas áreas tecnológicas e industriais. Desde 1968, o Departamento de Química (DEQUIM) forma profissionais
+          qualificados, destacando-se na ciência e indústria. Com foco no dinamismo do mercado, promove um curso
+          atualizado e incentiva a participação em programas de Iniciação Científica.
         </p>
       </div>
     </div>
