--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <span class="titulo-texto">Instituto de Ciências Exatas | UFRRJ</span>
     </div>
     <ul class="navegacao">
-      <li><a href="./ice.html" class="link-navbar">Sobre Nós</a></li>
+      <li><a href="./index.html" class="link-navbar">Sobre Nós</a></li>
       <li><a href="./noticiasice.html" class="link-navbar">Notícias</a></li>
       <li><a href="./departamentos.html" class="link-navbar">Departamentos</a></li>
     </ul>
